--- a/views/charity/charityListTemplate.ejs
+++ b/views/charity/charityListTemplate.ejs
@@ -65,7 +65,7 @@
 		    favIcon = "<a style=\"cursor:hand; cursor:pointer\" onClick=\"flipFav('" + transaction.recipient_id + "')\"><img src='/images/fav.png' id=img" + transaction.recipient_id +" border=0 width=30 height=27></a>";
 		<%}%>
 			
-        return defaultHTML.replace("{name}","<a style=\"color: #202090;\" href='/charity?id=" + transaction.recipient_id + "'>" + transaction.name + "</a>" )
+        return defaultHTML.replace("{name}","<a style=\"color: #202090;\" href='/charity/" + transaction.recipient_id + "'>" + transaction.name + "</a>" )
 		.replace("{ICONS}",favIcon + "<a style=\"color: #202090;\" href='" + website + "' target='_blank'><img src='/images/web.png' border=0 width=20 height=20></a>"  )
                 .replace("{EIN}",transaction.EIN)
                 .replace("{Address}",transaction.address+', '+transaction.city+', '+transaction.state+', '+transaction.zipcode)
