--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -42,10 +42,10 @@
         <h5>Map</h5>
         <!-- Clicking this placeholder fires the mapModal Reveal modal -->
         <p>
-            <a href="" data-toggle="modal" data-target="#myModal"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42988.106131295346!2d-122.12157799999995!3d47.669723999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900cad2000ee23%3A0x5e0390eac5d804f2!2sRedmond%2C+WA!5e0!3m2!1sen!2sus!4v1420793309460" width="500" height="400" frameborder="0" style="border:0"></iframe><br />
+            <a href="" data-toggle="modal" data-target="#myModal" style="color: #202090"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42988.106131295346!2d-122.12157799999995!3d47.669723999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900cad2000ee23%3A0x5e0390eac5d804f2!2sRedmond%2C+WA!5e0!3m2!1sen!2sus!4v1420793309460" width="500" height="400" frameborder="0" style="border:0"></iframe><br />
 
             </a><br />
-            <a href="" data-toggle="modal" data-target="#myModal">View Map</a>
+            <a href="" data-toggle="modal" data-target="#myModal" style="color: #202090">View Map</a>
         </p>
         <p>
             1000 WillGive way<br />
