--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -35,6 +35,7 @@
           }
 
 
+
       </style>
       <%include ../layout/navbar.ejs%>
 
@@ -44,11 +45,31 @@
       <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
       <script src="https://checkout.stripe.com/v2/checkout.js"></script>
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places,geometry"></script>
-
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54ade3b442958c1a" async="async"></script>
   </head>
 
   <body>
       <!-- wrapper-->
+      <div id="fb-root"></div>
+      <script>
+          window.fbAsyncInit = function() {
+              FB.init({
+                  appId      : '323966477728028',
+                  xfbml      : true,
+                  version    : 'v2.1'
+              });
+          };
+
+          (function(d, s, id){
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) {return;}
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/en_US/sdk.js";
+              fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+      </script>
+
 
     <div id="main" class="container-fluid" >
 
@@ -60,7 +81,13 @@
 
 
         <div class="row">
-          <h2 id="orgName" class="text-center" style="padding-bottom: 1%; padding-top: 2%"></h2>
+            <div class="text-center" style="padding-bottom: 2%;padding-top: 2%">
+                <h2 id="orgName" class="text-center" style=" "></h2>
+                <div class="row">
+                    <div id="fblike"><fb:like show-faces="false" layout="button_count"></fb:like></div>
+
+                </div>
+            </div>
             <div id="editMyPageDiv" class="row" style="display: none">
                 <a href="#" id="editMyPageLink" style="float: right; padding-right: 5%">Edit My Page</a>
             </div>
@@ -68,14 +95,23 @@
             <div id="wrapper" class="container-fluid" >
             <div id="main_left" class="col-lg-8">
                 <!--Gallery Slides-->
+
                 <div id="img_slides" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img id ="charity_logo" src="" alt="First slide">
+                            <img og:image id ="charity_logo" src="" alt="First slide">
                         </div>
                     </div>
                 </div>
-
+                <div class="row" style="height: 50px; padding-top: 1%;padding-bottom: 1%">
+                    <div class="share_button col-xs-2" >
+                        <div class="fb-share-button" id="fbShareButton" data-href="www.willgive.org/charity/<%=pageId%>" data-type="button_count"></div>
+                    </div>
+                    <div id="tweets" class="col-xs-1">
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-size="">Tweet</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    </div>
+                </div>
                 <!-- left text-->
                 <div id="introduction">
 
@@ -262,10 +298,7 @@
 
               })
 
-
               //direct charge on the account without pop up payment checkout wizard
-
-
       </script>
 
     <%include ../layout/footer.ejs%>
@@ -305,6 +338,7 @@
         }
         $(document).ready(function(){
             getCharityById();
+            //$('#fbShareButton').attr('href', document.URL);
             if(recipientId == $('#userId').html()) {
                 $('#editMyPageDiv').show();
             }
