--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -84,7 +84,7 @@
             <div class="text-center" style="padding-bottom: 2%;padding-top: 2%">
                 <h2 id="orgName" class="text-center" style=" "></h2>
                 <div class="row">
-                    <div id="fblike"><fb:like show-faces="false" layout="button_count"></fb:like></div>
+                    <div id="fblike"><fb:like show-faces="false" class="fb-like-button" id="fbLikeButton" layout="button_count"></fb:like></div>
 
                 </div>
             </div>
@@ -105,10 +105,10 @@
                 </div>
                 <div class="row" style="height: 50px; padding-top: 1%;padding-bottom: 1%">
                     <div class="share_button col-xs-2" >
-                        <div class="fb-share-button" id="fbShareButton" data-href="www.willgive.org/charity/<%=pageId%>" data-type="button_count"></div>
+                        <fb:share class="fb-share-button" id="fbShareButton" data-href="www.willgive.org/charity/<%=pageId%>" data-type="button_count"></fb:share>
                     </div>
                     <div id="tweets" class="col-xs-1">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-size="">Tweet</a>
+                        <a href="https://twitter.com/share" id="twitterShareButton" class="twitter-share-button" data-size="">Tweet</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </div>
                 </div>
@@ -257,7 +257,9 @@
       <script>
 
           $('#contribute_button').click(function(){
-
+              <%if ( undefined==user || user.provider=='recipient' ) {%>
+                    window.location.href='/login/signin';
+              <%} else {%>
               //get userId from session
               //query DB to find strip ID
               //jQuery.get( url [, data ] [, success ] [, dataType ] )
@@ -265,8 +267,8 @@
 
               var stripId;
               //Inside a function a special variable "arguments" is always available. It's similar to an array in that it has a length property, but it lacks the built-in methods of an array.
-              $.get(existingUserById, function(results) {
-
+              $.get(existingUserById, { userId: <%=user.userId%>},function(result) {
+                      alert("<%=user.userId%>");
                       if(!result || result == "failed") {
                           alert("failed to get results");
                           return;
@@ -294,9 +296,10 @@
                       });
 
                       return false;
-                  });
+              });
+              <% } %>
 
-              })
+          })
 
               //direct charge on the account without pop up payment checkout wizard
       </script>
@@ -324,6 +327,7 @@
                 $('#nameInfo').html(charity.name);
                 $('#EINInfo').html(charity.EIN);
                 $('#phoneInfo').html(charity.phone);
+                $('#faxInfo').html(charity.fax);
                 if(charity.website) {
                     $('#websiteInfo').html(charity.website.trim());
                     $('#websiteInfo').attr('href','http://'+charity.website.trim());
