--- a/views/login/userContribution.ejs
+++ b/views/login/userContribution.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
@@ -9,12 +9,10 @@
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
     <link rel="stylesheet" href="/assets/css/simplePagination.css" >
-
-
-    <%activeMenu = "SignUp"%>
-    <%include ../layout/navbar.ejs%>
 </head>
 <body>
+    <%activeMenu = "SignUp"%>
+    <%include ../layout/navbar.ejs%>
 <div class="container sidebar-content" style="height:auto; min-height: 90%;">
     <div class="row row-offcanvas row-offcanvas-left">
 
