--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -102,8 +102,7 @@
             },
             signupPasswordConfirm : {
                 required: true,
-                minlength: 8,
-                equalTo : signupPassword
+                minlength: 8
             },
             signupEmail: {
                 required : true,
