adding fbcredential when in prod, not using node-config

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
             <div class="col-sm-6 text-center">
                 <h2>Make A Better World</h2>
-                <p class="lead">Donation make the world better. Please donate as much as you have !!!</p>
+                <p class="lead">Donation make the world better. Please try our best to make the world better and better</p>
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
             <div class="col-sm-3 col-xs-6">
                 <i class="glyphicon glyphicon-bullhorn"> </i>
                 <h4>Credit Card</h4>
-                <p>We surpport all kinds of credit cards and paypal. </p>
+                <p>We support all kinds of credit cards. </p>
             </div>
         </div>
     </div>
