--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -227,6 +227,7 @@
       <form id="form" action="/payment/stripePayment" method="POST" style="display:none;">
           <input id="amount"  name="amount" value="0">
           <input id="receipientId"  name="receipientId" value="0">
+          <input id="stripeCustomerId"  name="stripeCustomerId" value="0">
 
       </form>
 
@@ -267,20 +268,26 @@
 
               //Inside a function a special variable "arguments" is always available. It's similar to an array in that it has a length property, but it lacks the built-in methods of an array.
               $.get(existingUserById, { userId: <%=user.userId%> },function(result) {
-                      alert("<%=user.userId%>");
-                      if(!result || result == "failed") {
-                          alert("failed to get results");
+                  alert("<%=user.userId%>");
+                  if (!result || result == "failed") {
+                      alert("failed to get results");
+                      return;
+                  }
+                  //alert("currentResults:"+ result);
+                  stripeCustomerId = result;
+                  console.dir("stripeCustomerId(charity.ejs): "+ stripeCustomerId);
+                  //alert("current stripCustomerId:"+ stripCustomerId);
+                  //need to pass thru charityId  as well
+
+                  //if stripCustomerId not null, then post to the payment page automatically
+                    if(stripeCustomerId!=null) {
+                        jQuery("#stripeCustomerId").val(stripeCustomerId);
+
+                         $('form').submit();
                           return;
-                      }
+                     }
 
-                      //alert("currentResults:"+ result);
-                        stripId = result;
-                        console.dir(stripId);
-                      //alert("current stripId:"+ stripId);
-
-                     alert("charityId: "+<%=pageId%>);
-                    //need to pass thru charityId  as well
-
+                    //else of stripCustomerId is null, need to pop up Stripe checkout widget to enter credit card info
                       var token = function(res){
                           var $input = $('<input type=hidden name=stripeToken />').val(res.id);
                           $('form').append($input).submit();
