fix payment scale issue in cents

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -284,6 +284,8 @@
                         jQuery("#stripeCustomerId").val(stripeCustomerId);
 
                          $('form').submit();
+
+                        alert( "payment successfully made ");
                           return;
                      }
 
