Clean up home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,17 +66,17 @@
             <div class="col-sm-3 col-xs-6">
                 <i class="glyphicon glyphicon-leaf"> </i>
                 <h4>Service APP</h4>
-                <p>We have dedicated mobile app for both iphone and android to raise money</p>
+                <p>We have dedicated mobile apps on iphone and android for givers and receivers</p>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <i class="glyphicon glyphicon-phone-alt"> </i>
-                <h4>QR code</h4>
-                <p>We can generate QR code for u to make an easy donation</p>
+                <h4>QR promotion</h4>
+                <p>We generate rich informational QR code for you to make an easy donation</p>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <i class="glyphicon glyphicon-bullhorn"> </i>
-                <h4>Credit Card</h4>
-                <p>We support all kinds of credit cards. </p>
+                <h4>Easy payments</h4>
+                <p>We support all major credit cards. </p>
             </div>
         </div>
     </div>
@@ -92,20 +92,22 @@
             <div class="col-sm-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Additional information</h2>
+                        <h2 class="panel-title">Why us?</h2>
                     </div>
                     <div class="panel-body lead">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet.
+                        <b>Charities</b> -- It is free to use our services and get access to our app users. 
+                        <p><b>Donators</b> -- We verifiy every registered charity and make sure that they're not only eligible but also efficient. 100% of your donated money (except fees charged by credit card companies) directly go to the charities of your choice.  
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Additional information</h2>
+                        <h2 class="panel-title">How to start?</h2>
                     </div>
                     <div class="panel-body lead">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet.
+                        <b>Charities</b> -- Register online or call our support line 1-800-296-GIVE
+	       <p><b>Donators</b> -- Register online and download the app. 
                     </div>
                 </div>
             </div>
